--- a/css/style.css
+++ b/css/style.css
@@ -764,3 +764,10 @@ img {
 .submit-about:is(:focus, :hover) {
   background-color: var(--pressed-state-color);
 }
+@media screen and (min-width: 480px) {
+  .address {
+    display: none;
+  }
+}
+@media screen and (min-width: 768px) {
+}
