--- a/css/tablet.css
+++ b/css/tablet.css
@@ -9,7 +9,7 @@
   .section-hero {
     background-color: var(--dark-color);
     background-image: var(--hero-background-grad),
-      url(../images/background-image-1x.jpg);
+      url(../images/background-hero-tablet.jpg);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
@@ -48,4 +48,32 @@
   .hero-btn:focus {
     background-color: var(--pressed-state-color);
   }
+/* }-------------------------section 1------------------ */
+.section-features {
+  padding-top: 96px;
+  padding-bottom: 96px;
+}
+.features {
+  display: none;
+}
+.features-subtitle {
+  margin-bottom: 8px;
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 1.2;
+  letter-spacing: 0.02em;
+  color: var(--dark-color);
+}
+.features-list {
+  display: flex;
+  gap: 24px;
+}
+.features-item {
+  flex-basis: calc((100% - 72px) / 4);
+}
+.features-text {
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: var(--text-color);
 }
